# mygf

./: README.rst  pyproject.toml  requirements.txt  setup.py
mygf/: __init__.py  decorators.py  main.py  sync.py
mygf/backends/: __init__.py  redis.py
tests/: test_sync.py
