[tool.poetry]
name = "mygf"
version = "0.0.1"
description = "Girlfriend of MySQL(Clean up cache with MySQL binlog,based on the framework cache ring)."
authors = ["long2ice <long2ice@prismslight.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mysql-replication = "*"
redis = "*"
ring = "*"
aioredis = "*"
cryptography = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
taskipy = "*"
asynctest = "*"

[tool.taskipy.tasks]
export = "poetry export -f requirements.txt --without-hashes > requirements.txt"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[[tool.poetry.source]]
url = "https://mirrors.aliyun.com/pypi/simple/"
name = "aliyun"